--- a/admin.html
+++ b/admin.html
@@ -11,12 +11,12 @@
     <!-- Font Aweseome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css"  />
     
-    <title>{ devlog }</title>
+    <title>{ devlog::admin }</title>
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <label class="logo">{devlog}: admin</label>
+      <label class="logo">{devlog::admin}</label>
       <input type="checkbox" id="check">
       <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
