--- a/license.html
+++ b/license.html
@@ -34,7 +34,7 @@
 
       <div class="content-block">
         <h1 class="content-title">License</h1>
-        <p>
+        <p class="justify">
           MIT License
           <br><br>
           Copyright (c) 2020 oliverjakobs
