--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <!-- Font Aweseome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css"  />
     
-    <title>{ devlog }</title>
+    <title>{ devlog::about }</title>
   </head>
   <body>
     <!-- Navbar -->
