--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <!-- Font Aweseome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css"  />
     
-    <title>{ devlog }</title>
+    <title>{ devlog::projects }</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -34,6 +34,21 @@
 
       <div class="content-block">
         <h1 class="content-title">Projects</h1>
+        <p class="justify separator-bottom">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae nulla et nunc faucibus rutrum. Integer 
+          sed elementum erat. Sed ut lobortis tortor, in tincidunt purus. Nullam viverra ultricies lacus. Class aptent 
+          taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam vulputate id massa nec 
+          mollis. Sed quis eros sit amet lectus sollicitudin imperdiet. In laoreet nisi erat, et iaculis mi viverra quis. 
+          Nulla facilisi. Nullam vitae viverra nunc. Quisque quis tincidunt orci. Sed blandit aliquam purus ut semper. Ut 
+          sit amet risus luctus, lacinia dolor quis, porttitor ex. Suspendisse rhoncus, nunc vel aliquam rutrum, velit mi. 
+        </p>
+        <ul class="project-list">
+          <li><a href="project.html">Frost<span>View &raquo;</span></a></li>
+          <li><a href="project.html">Ignis<span>View &raquo;</span></a></li>
+          <li><a href="project.html">toolbox<span>View &raquo;</span></a></li>
+          <li><a href="project.html">Clockwork<span>View &raquo;</span></a></li>
+          <li><a href="project.html">Capricorn<span>View &raquo;</span></a></li>
+        </ul>
       </div>
         
     </div>
