--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <i class="fas fa-bars"></i>
       </label>
       <ul class="menu">
-        <li><a href="">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="timeline.html">Timeline</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="about.html">About</a></li>
@@ -92,18 +92,11 @@
     <!-- Footer -->
     <footer class="page-footer container">
       <ul class="footer-content">
-        <li><a href="license.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
-        <li><a href="terms.html">Terms & Conditions</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="copyright.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
         <li><a href="https://github.com/oliverjakobs"><p class="icon fab fa-github"></p>Github</a></li>
+        <li><a href="contact.html"><p class="icon far fa-envelope"></p>Contact</a></li>
       </ul>
     </footer>
-
-    <!-- JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <!-- Custom script -->
-    <script src="js/script.js"></script>
 
   </body>
 </html>
