--- a/admin.html
+++ b/admin.html
@@ -38,18 +38,11 @@
     <!-- Footer -->
     <footer class="page-footer container">
       <ul class="footer-content">
-        <li><a href="license.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
-        <li><a href="terms.html">Terms & Conditions</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="copyright.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
         <li><a href="https://github.com/oliverjakobs"><p class="icon fab fa-github"></p>Github</a></li>
+        <li><a href="contact.html"><p class="icon far fa-envelope"></p>Contact</a></li>
       </ul>
     </footer>
-
-    <!-- JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <!-- Custom script -->
-    <script src="js/script.js"></script>
 
   </body>
 </html>
