--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="timeline.html">Timeline</a></li>
-        <li><a href="">Projects</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
@@ -56,18 +56,11 @@
     <!-- Footer -->
     <footer class="page-footer container">
       <ul class="footer-content">
-        <li><a href="license.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
-        <li><a href="terms.html">Terms & Conditions</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="copyright.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
         <li><a href="https://github.com/oliverjakobs"><p class="icon fab fa-github"></p>Github</a></li>
+        <li><a href="contact.html"><p class="icon far fa-envelope"></p>Contact</a></li>
       </ul>
     </footer>
-
-    <!-- JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <!-- Custom script -->
-    <script src="js/script.js"></script>
 
   </body>
 </html>
