--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
     <!-- Content -->
     <div class="content container clearfix">
 
-      <div class="content-block">
-        <h1 class="content-title">About</h1>
+      <div class="block">
+        <h1 class="title">About</h1>
         <p class="justify">
           Morbi sed dapibus ipsum. Curabitur sed leo ac felis eleifend blandit non non felis. Curabitur aliquam, dui ut facilisis cursus, 
           augue ipsum suscipit felis, sed faucibus mi nibh sed eros. Sed venenatis lorem orci, et ultrices erat luctus eget. Nam luctus leo 
