--- a/admin.html
+++ b/admin.html
@@ -29,8 +29,8 @@
     <!-- Content -->
     <div class="content container clearfix">
 
-      <div class="content-block">
-        <h1 class="content-title">Admin</h1>
+      <div class="block">
+        <h1 class="title">Admin</h1>
       </div>
         
     </div>
