--- a/copyright.html
+++ b/copyright.html
@@ -32,8 +32,8 @@
     <!-- Content -->
     <div class="content container clearfix">
 
-      <div class="content-block">
-        <h1 class="content-title">Copyright</h1>
+      <div class="block">
+        <h1 class="title">Copyright</h1>
         <p class="justify">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras elit nisi, condimentum in sem non, faucibus condimentum 
           quam. Morbi vestibulum molestie eleifend. Aliquam erat volutpat. Curabitur pellentesque placerat lobortis. Ut ultricies 
