--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,9 @@
     <!-- Content -->
     <div class="content container clearfix">
 
-      <div class="content-block">
-        <h1 class="content-title">Projects</h1>
-        <p class="justify separator-bottom">
+      <div class="block">
+        <h1 class="title">Projects</h1>
+        <p class="justify">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae nulla et nunc faucibus rutrum. Integer 
           sed elementum erat. Sed ut lobortis tortor, in tincidunt purus. Nullam viverra ultricies lacus. Class aptent 
           taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam vulputate id massa nec 
