changed view more to view all

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </section>
         </article>
         
-        <a href="timeline.html" class="button">View more &raquo;</i></a>
+        <a href="timeline.html" class="button">View all &raquo;</i></a>
       </div>
     </div>
 
