--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     </nav>
 
     <!-- Content -->
-    <div class="content container-small clearfix">
+    <div class="page-content container-small clearfix">
 
       <div class="block">
         <form class="contact">
@@ -55,7 +55,7 @@
 
     <!-- Footer -->
     <footer class="page-footer container">
-      <ul class="footer-content">
+      <ul class="content">
         <li><a href="copyright.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
         <li><a href="https://github.com/oliverjakobs"><p class="icon fab fa-github"></p>Github</a></li>
         <li><a href="contact.html"><p class="icon far fa-envelope"></p>Contact</a></li>
