--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <!-- Navbar -->
     <nav class="navbar">
       <label class="logo">{devlog}</label>
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
+      <input type="checkbox" id="menu-check">
+      <label for="menu-check" class="menu-btn"><i class="fas fa-bars"></i></label>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="timeline.html">Timeline</a></li>
@@ -32,7 +30,7 @@
     <div class="page-content container clearfix">
 
       <div class="block">
-        <h1 class="title">Welcome to {devlog}</h1>
+        <h1 class="title separator-bottom">Welcome to {devlog}</h1>
         <p class="justify">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi purus mi, pellentesque sit amet bibendum at, ultricies sed lectus. 
           Integer a nunc vitae massa dignissim semper. Sed viverra rutrum sapien, eu aliquam elit pretium at. Donec sed eros eu lorem placerat 
