--- a/project.html
+++ b/project.html
@@ -16,10 +16,8 @@
     <!-- Navbar -->
     <nav class="navbar">
       <label class="logo">{devlog}</label>
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
+      <input type="checkbox" id="menu-check">
+      <label for="menu-check" class="menu-btn"><i class="fas fa-bars"></i></label>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="timeline.html">Timeline</a></li>
@@ -32,7 +30,7 @@
     <div class="page-content container clearfix">
 
       <div class="block">
-        <h1 class="title">Frost</h1>
+        <h1 class="title separator-bottom">Frost</h1>
         <p class="justify">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus maximus justo non erat bibendum, maximus rutrum mauris dignissim. 
           Nunc lacinia eleifend massa in eleifend. Curabitur at velit enim. Vestibulum ac elit orci. Sed a leo et ex bibendum sollicitudin ac 
