--- a/about.html
+++ b/about.html
@@ -16,10 +16,8 @@
     <!-- Navbar -->
     <nav class="navbar">
       <label class="logo">{devlog}</label>
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
+      <input type="checkbox" id="menu-check">
+      <label for="menu-check" class="menu-btn"><i class="fas fa-bars"></i></label>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="timeline.html">Timeline</a></li>
@@ -32,7 +30,7 @@
     <div class="page-content container clearfix">
 
       <div class="block">
-        <h1 class="title">About</h1>
+        <h1 class="title separator-bottom">About</h1>
         <p class="justify">
           Morbi sed dapibus ipsum. Curabitur sed leo ac felis eleifend blandit non non felis. Curabitur aliquam, dui ut facilisis cursus, 
           augue ipsum suscipit felis, sed faucibus mi nibh sed eros. Sed venenatis lorem orci, et ultrices erat luctus eget. Nam luctus leo 
