--- a/admin.html
+++ b/admin.html
@@ -16,10 +16,8 @@
     <!-- Navbar -->
     <nav class="navbar">
       <label class="logo">{devlog::admin}</label>
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
+      <input type="checkbox" id="menu-check">
+      <label for="menu-check" class="menu-btn"><i class="fas fa-bars"></i></label>
       <ul class="menu">
         <li><a href="index.html">Back</a></li>
       </ul>
@@ -29,7 +27,7 @@
     <div class="page-content container clearfix">
 
       <div class="block">
-        <h1 class="title">Admin</h1>
+        <h1 class="title separator-bottom">Admin</h1>
       </div>
         
     </div>
