--- a/copyright.html
+++ b/copyright.html
@@ -16,10 +16,8 @@
     <!-- Navbar -->
     <nav class="navbar">
       <label class="logo">{devlog}</label>
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
+      <input type="checkbox" id="menu-check">
+      <label for="menu-check" class="menu-btn"><i class="fas fa-bars"></i></label>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="timeline.html">Timeline</a></li>
@@ -32,7 +30,7 @@
     <div class="page-content container clearfix">
 
       <div class="block">
-        <h1 class="title">Copyright</h1>
+        <h1 class="title separator-bottom">Copyright</h1>
         <p class="justify">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras elit nisi, condimentum in sem non, faucibus condimentum 
           quam. Morbi vestibulum molestie eleifend. Aliquam erat volutpat. Curabitur pellentesque placerat lobortis. Ut ultricies 
