--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,8 @@
     <!-- Navbar -->
     <nav class="navbar">
       <label class="logo">{devlog}</label>
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
+      <input type="checkbox" id="menu-check">
+      <label for="menu-check" class="menu-btn"><i class="fas fa-bars"></i></label>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="timeline.html">Timeline</a></li>
@@ -32,7 +30,7 @@
     <div class="page-content container clearfix">
 
       <div class="block">
-        <h1 class="title">Projects</h1>
+        <h1 class="title separator-bottom">Projects</h1>
         <p class="justify">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae nulla et nunc faucibus rutrum. Integer 
           sed elementum erat. Sed ut lobortis tortor, in tincidunt purus. Nullam viverra ultricies lacus. Class aptent 
