--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <label class="logo">{devlog::admin}</label>
+      <label class="logo"><a href="index.html">{devlog}</a></label>
       <input type="checkbox" id="menu-check">
       <label for="menu-check" class="menu-btn"><i class="fas fa-bars"></i></label>
       <ul class="menu">
