--- a/about.html
+++ b/about.html
@@ -15,14 +15,14 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <label class="logo"><a href="index.html">{devlog}</a></label>
+      <label class="logo"><a href="index.html">devlog</a></label>
       <input type="checkbox" id="menu-check">
       <label for="menu-check" class="menu-btn"><i class="fas fa-bars"></i></label>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="timeline.html">Timeline</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html" class="active">About</a></li>
       </ul>
     </nav>
 
