--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
     <!-- Footer -->
     <footer class="page-footer container">
       <ul class="content">
-        <li><a href="copyright.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
-        <li><a href="https://github.com/oliverjakobs"><p class="icon fab fa-github"></p>Github</a></li>
-        <li><a href="contact.html"><p class="icon far fa-envelope"></p>Contact</a></li>
+        <li><a href="copyright.html"><i class="far fa-copyright"></i>2020 Oliver Jakobs</a></li>
+        <li><a href="https://github.com/oliverjakobs"><i class="fab fa-github"></i>Github</a></li>
+        <li><a href="contact.html"><i class="far fa-envelope"></i>Contact</a></li>
       </ul>
     </footer>
 
