--- a/project.html
+++ b/project.html
@@ -49,8 +49,8 @@
           <header>
             <h2 class="title"><a href="single.html">Post 1</a></h2>
             <ul class="meta">
-              <li><i class="icon far fa-calendar"></i>20/01/2020</li>
-              <li><i class="icon far fa-user"></i>Oliver Jakobs</li>
+              <li><i class="far fa-calendar"></i>20/01/2020</li>
+              <li><i class="far fa-user"></i>Oliver Jakobs</li>
             </ul>
           </header>
           <div>
@@ -70,8 +70,8 @@
           <header>
             <h2 class="title"><a href="single.html">Post 3</a></h2>
             <ul class="meta">
-              <li><i class="icon far fa-calendar"></i>17/01/2020</li>
-              <li><i class="icon far fa-user"></i>Oliver Jakobs</li>
+              <li><i class="far fa-calendar"></i>17/01/2020</li>
+              <li><i class="far fa-user"></i>Oliver Jakobs</li>
             </ul>
           </header>
           <div>
@@ -93,9 +93,9 @@
     <!-- Footer -->
     <footer class="page-footer container">
       <ul class="content">
-        <li><a href="copyright.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
-        <li><a href="https://github.com/oliverjakobs"><p class="icon fab fa-github"></p>Github</a></li>
-        <li><a href="contact.html"><p class="icon far fa-envelope"></p>Contact</a></li>
+        <li><a href="copyright.html"><i class="far fa-copyright"></i>2020 Oliver Jakobs</a></li>
+        <li><a href="https://github.com/oliverjakobs"><i class="fab fa-github"></i>Github</a></li>
+        <li><a href="contact.html"><i class="far fa-envelope"></i>Contact</a></li>
       </ul>
     </footer>
 
