--- a/single.html
+++ b/single.html
@@ -61,9 +61,9 @@
         </p>
         
         <ul class="meta">
-          <li><i class="icon far fa-calendar"></i>20/01/2020</li>
-          <li><i class="icon far fa-folder"></i>Frost</li>
-          <li><i class="icon far fa-user"></i>Oliver Jakobs</li>
+          <li><i class="far fa-calendar"></i>20/01/2020</li>
+          <li><i class="far fa-folder"></i>Frost</li>
+          <li><i class="far fa-user"></i>Oliver Jakobs</li>
         </ul>
       </div>
         
@@ -72,9 +72,9 @@
     <!-- Footer -->
     <footer class="page-footer container">
       <ul class="content">
-        <li><a href="copyright.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
-        <li><a href="https://github.com/oliverjakobs"><p class="icon fab fa-github"></p>Github</a></li>
-        <li><a href="contact.html"><p class="icon far fa-envelope"></p>Contact</a></li>
+        <li><a href="copyright.html"><i class="far fa-copyright"></i>2020 Oliver Jakobs</a></li>
+        <li><a href="https://github.com/oliverjakobs"><i class="fab fa-github"></i>Github</a></li>
+        <li><a href="contact.html"><i class="far fa-envelope"></i>Contact</a></li>
       </ul>
     </footer>
 
