--- a/timeline.html
+++ b/timeline.html
@@ -37,9 +37,9 @@
           <header>
             <h2 class="title"><a href="single.html">Post 1</a></h2>
             <ul class="meta">
-              <li><i class="icon far fa-calendar"></i>20/01/2020</li>
-              <li><i class="icon far fa-folder"></i>Frost</li>
-              <li><i class="icon far fa-user"></i>Oliver Jakobs</li>
+              <li><i class="far fa-calendar"></i>20/01/2020</li>
+              <li><i class="far fa-folder"></i>Frost</li>
+              <li><i class="far fa-user"></i>Oliver Jakobs</li>
             </ul>
           </header>
           <div>
@@ -59,9 +59,9 @@
           <header>
             <h2 class="title"><a href="single.html">Post 2</a></h2>
             <ul class="meta">
-              <li><i class="icon far fa-calendar"></i>19/01/2020</li>
-              <li><i class="icon far fa-folder"></i>Ignis</li>
-              <li><i class="icon far fa-user"></i>Oliver Jakobs</li>
+              <li><i class="far fa-calendar"></i>19/01/2020</li>
+              <li><i class="far fa-folder"></i>Ignis</li>
+              <li><i class="far fa-user"></i>Oliver Jakobs</li>
             </ul>
           </header>
           <div>
@@ -78,9 +78,9 @@
           <header>
             <h2 class="title"><a href="single.html">Post 3</a></h2>
             <ul class="meta">
-              <li><i class="icon far fa-calendar"></i>17/01/2020</li>
-              <li><i class="icon far fa-folder"></i>Frost</li>
-              <li><i class="icon far fa-user"></i>Oliver Jakobs</li>
+              <li><i class="far fa-calendar"></i>17/01/2020</li>
+              <li><i class="far fa-folder"></i>Frost</li>
+              <li><i class="far fa-user"></i>Oliver Jakobs</li>
             </ul>
           </header>
           <div>
@@ -101,9 +101,9 @@
     <!-- Footer -->
     <footer class="page-footer container">
       <ul class="content">
-        <li><a href="copyright.html"><p class="icon far fa-copyright"></p>2020 Oliver Jakobs</a></li>
-        <li><a href="https://github.com/oliverjakobs"><p class="icon fab fa-github"></p>Github</a></li>
-        <li><a href="contact.html"><p class="icon far fa-envelope"></p>Contact</a></li>
+        <li><a href="copyright.html"><i class="far fa-copyright"></i>2020 Oliver Jakobs</a></li>
+        <li><a href="https://github.com/oliverjakobs"><i class="fab fa-github"></i>Github</a></li>
+        <li><a href="contact.html"><i class="far fa-envelope"></i>Contact</a></li>
       </ul>
     </footer>
 
