comments + some fixes

--- a/single.html
+++ b/single.html
@@ -66,6 +66,12 @@
           <li><i class="far fa-user"></i>Oliver Jakobs</li>
         </ul>
       </div>
+      <div class="comments">
+        <i class="far fa-comments"></i>
+        <p>
+          Placeholder for a <a href="https://disqus.com/" class="default">disqus</a> comment section.
+        </p>
+      </div>
         
     </div>
 
